--- a/src/PIDEV/CrowdRiseBundle/Resources/views/Accueil/accueil.html.twig
+++ b/src/PIDEV/CrowdRiseBundle/Resources/views/Accueil/accueil.html.twig
@@ -55,152 +55,84 @@
         <div class="prices">
             <div class="container">
                 <div class="row">
+                        <a href="https://github.com/kouuki/Pidev/settings/collaboration">
+                        <div class="price-box col-sm-6 col-md-4 wow flipInY" data-wow-delay="0.3s">
+                            <div class="thumbnail">
+                                <img src='http://www.keenthemes.com/preview/conquer/assets/plugins/jcrop/demos/demo_files/image1.jpg' alt="...">
+                                <div class="caption">
+                                    <h3>Nom du Projet</h3>
+                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <br>
+                                    <div id="somme">
+                                        <p><b>100.56</b> DNT</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
 
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
+                                        </div>
+                                    </div>
+                                    <div id="info-deadline-pourcentage">
+                                        <p class="text-right"><i> <b> 20 </b>jours restants</i>
+                                        </p>    
+                                    </div>
+                                    {#<p><a href="#" class="btn btn-default" role="button">Button</a></p>#}
+                                </div>
+                            </div>
 
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
-                            </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
-                           
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
-                            </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
-                           
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
-                            </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
-                           
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
-                            </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
-                           
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
-                            </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
+                        </div>
+                        </a>
+                         <a href="https://github.com/kouuki/Pidev/settings/collaboration">
+                        <div class="price-box col-sm-6 col-md-4 wow flipInY" data-wow-delay="0.3s">
+                            <div class="thumbnail">
+                                <img src='http://www.keenthemes.com/preview/conquer/assets/plugins/jcrop/demos/demo_files/image1.jpg' alt="...">
+                                <div class="caption">
+                                    <h3>Nom du Projet</h3>
+                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <br>
+                                    <div id="somme">
+                                        <p><b>100.56</b> DNT</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
 
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
+                                        </div>
+                                    </div>
+                                    <div id="info-deadline-pourcentage">
+                                        <p class="text-right"><i> <b> 20 </b>jours restants</i>
+                                        </p>    
+                                    </div>
+                                    {#<p><a href="#" class="btn btn-default" role="button">Button</a></p>#}
+                                </div>
                             </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
 
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
-                            </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
-                    <div class="price-box col-sm-6 col-md-3 wow flipInY" data-wow-delay="0.3s">
-                        <div class="panel panel-default">
+                        </div>
+                        </a>
+                         <a href="https://github.com/kouuki/Pidev/settings/collaboration">
+                        <div class="price-box col-sm-6 col-md-4 wow flipInY" data-wow-delay="0.3s">
+                            <div class="thumbnail">
+                                <img src='http://www.keenthemes.com/preview/conquer/assets/plugins/jcrop/demos/demo_files/image1.jpg' alt="...">
+                                <div class="caption">
+                                    <h3>Nom du Projet</h3>
+                                    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+                                    <br>
+                                    <div id="somme">
+                                        <p><b>100.56</b> DNT</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100" style="width: 45%">
 
-                            <div class="panel-body text-center">
-                                <p class="lead"><strong>$49</strong></p>
+                                        </div>
+                                    </div>
+                                    <div id="info-deadline-pourcentage">
+                                        <p class="text-right"><i> <b> 20 </b>jours restants</i>
+                                        </p>    
+                                    </div>
+                                    {#<p><a href="#" class="btn btn-default" role="button">Button</a></p>#}
+                                </div>
                             </div>
-                            <ul class="list-group text-center">
-                                <li class="list-group-item">Personal Use</li>
-                                <li class="list-group-item">3 projects</li>
-                                <li class="list-group-item">1 GB Disk</li>
-                                <li class="list-group-item">Custom Domain</li>
-                                <li class="list-group-item">24/7 Support</li>
-                            </ul>
-                            <div class="panel-footer text-center">
-                                <a class="btn btn-default" href="#">Order Now!</a>
-                            </div>
-                        </div>										
-                    </div>
 
+                        </div>
+                        </a>
                 </div> <!-- /.row -->
             </div> <!-- /.container -->
         </div>
